--- a/ui/src/app/pages/server-routes/server-show/server-show.page.html
+++ b/ui/src/app/pages/server-routes/server-show/server-show.page.html
@@ -35,6 +35,23 @@
         <ion-label><ion-text style="font-weight: bold;" color="primary">Check for Updates</ion-text></ion-label>
       </ion-item>
 
+      <ion-item-divider>Backups</ion-item-divider>
+      <!-- create backup -->
+      <ion-item button [disabled]="cannotBackup$ | async" (click)="presentModalBackup('create')">
+        <ion-icon slot="start" name="save-outline" color="primary"></ion-icon>
+        <ion-label style="display: flex; flex-direction: column;">
+          <ion-text color="primary">Create new Backup</ion-text>
+          <ion-text color="medium" style="font-size: x-small">
+            Last Backup: <!-- {{vars.lastBackup ? (vars.lastBackup | date: 'short') : 'never'}} -->
+          </ion-text>
+        </ion-label>
+      </ion-item>
+      <!-- restore backup -->
+      <ion-item lines="none" button [disabled]="cannotRestore$ | async" (click)="presentModalBackup('restore')">
+        <ion-icon slot="start" name="color-wand-outline" color="primary"></ion-icon>
+        <ion-label><ion-text color="primary">Restore from Backup</ion-text></ion-label>
+      </ion-item>
+
       <ion-item-divider></ion-item-divider>
 
       <ion-item [routerLink]="['specs']">
